Setup Tina for posts pages and fix issue with slug

--- a/content/posts/como-ganar-experiencia-como-developer-sin-tener-trabajo.mdx
+++ b/content/posts/como-ganar-experiencia-como-developer-sin-tener-trabajo.mdx
@@ -3,7 +3,7 @@ title: Cómo ganar experiencia como developer sin tener trabajo
 date: '2021-01-31'
 draft: false
 description: 5 razones por las cuales clonar aplicaciones es una excelente forma de ganar experiencia como developer que te ayudara a conseguir mejores oportunidades.
-tags: spanish, career, sideprojects
+tags: [spanish, career, sideprojects]
 coverimage: https://dev-to-uploads.s3.amazonaws.com/i/21ortjgovqw3jzqd34v6.jpeg
 include_coverimage_in_body: true
 ---
