--- a/content/posts/repos-interesantes-de-la-semana-2.mdx
+++ b/content/posts/repos-interesantes-de-la-semana-2.mdx
@@ -3,7 +3,7 @@ title: Repos interesantes de la semana #2
 date: '2021-01-17'
 draft: false
 description: Repositorios interesantes de la semana, en esta ocasion les traigo Naming cheatsheet, Electron Fiddle, ExplainShell, Starship y Visx.
-tags: spanish, opensource, webdev, programming
+tags: [spanish, opensource, webdev, programming]
 coverimage: https://dev-to-uploads.s3.amazonaws.com/i/wz8gsza72n7g6his43da.png
 canonical_url: https://matiasverdier.com/posts/repos-interesantes-de-la-semana-2
 series: Repos de la semana
