--- a/content/posts/repos-interesantes-de-la-semana-1.mdx
+++ b/content/posts/repos-interesantes-de-la-semana-1.mdx
@@ -2,8 +2,8 @@
 title: Repos interesantes de la semana #1
 date: '2021-01-12'
 draft: false
-description:
-tags: spanish, opensource, webdev, programming
+description: Repositorios interesantes de la semana, en esta ocasion les traigo SnapDrop, Mozilla Hubs, Patch Package y Twind
+tags: [spanish, opensource, webdev, programming]
 coverimage: https://images.prismic.io/matiasverdier-com/8f84dfef-7e36-4a7b-b820-cc3814523766_post.coverimage.url.png?auto=compress,format
 canonical_url: https://matiasverdier.com/posts/repos-interesantes-de-la-semana-1
 series: Repos de la semana
