Move images to uploads folder

--- a/content/posts/github-en-el-salon-de-clases.mdx
+++ b/content/posts/github-en-el-salon-de-clases.mdx
@@ -2,7 +2,7 @@
 title: GitHub en el salon de clases
 date: '2015-11-07'
 description: Classroom for GitHub es una aplicación que permite a los profesores y alumnos llevar un mejor control de las tareas que se asignan en los distintos cursos y logrando que los estudiantes se familiaricen con buenas practicas de programación como el control de versiones, seguimiento de incidentes, revisión de código, etc.
-coverimage: /images/classroom.png
+coverimage: /uploads/classroom.png
 include_coverimage_in_body: true
 draft: false
 ---
