--- a/content/posts/aplicaciones-multiplataforma-con-electron.mdx
+++ b/content/posts/aplicaciones-multiplataforma-con-electron.mdx
@@ -2,7 +2,7 @@
 title: Aplicaciones de escritorio multi plataforma con Electron
 date: '2015-11-03'
 description: Hoy les traigo Electron, una herramienta opensource muy útil para la creación de aplicaciones multiplataforma mediante tecnologías web (HTML, CSS, JS), esto permite utilizar los conocimientos que ya posees en dichas tecnologías facilitando la creación de versiones de escritorio para Windows, Mac y Linux.
-coverimage: /images/electron.jpg
+coverimage: /uploads/electron.jpg
 include_coverimage_in_body: false
 draft: false
 ---
@@ -15,7 +15,7 @@ Presenta funcionalidades como actualizaciones automáticas de nuestra app, repor
 
 Muchas aplicaciones populares han creado sus versiones de escritorio utilizando Electron, como el editor de texto [Atom](https://atom.io/), [Slack](https://slack.com/), [Visual Studio Code](https://code.visualstudio.com/), entre otras.
 
-![Electron](/images/hecho-con-electron.jpg)
+![Electron](/uploads/hecho-con-electron.jpg)
 
 Instalación
 
