--- a/content/posts/como-ganar-experiencia-como-developer-sin-tener-trabajo.mdx
+++ b/content/posts/como-ganar-experiencia-como-developer-sin-tener-trabajo.mdx
@@ -4,7 +4,7 @@ date: '2021-01-31'
 draft: false
 description: 5 razones por las cuales clonar aplicaciones es una excelente forma de ganar experiencia como developer que te ayudara a conseguir mejores oportunidades.
 tags: [spanish, career, sideprojects]
-coverimage: https://dev-to-uploads.s3.amazonaws.com/i/21ortjgovqw3jzqd34v6.jpeg
+coverimage: /uploads/21ortjgovqw3jzqd34v6.jpeg
 include_coverimage_in_body: true
 ---
 
@@ -20,7 +20,7 @@ Como me parece sumamente importante, sobre todo para personas que recién comien
 
 ## 1) No requiere creatividad
 
-![Ideas](https://dev-to-uploads.s3.amazonaws.com/i/5asq4uo0vf73bx935vlh.jpeg)
+![Ideas](/uploads/5asq4uo0vf73bx935vlh.jpeg)
 
 > Photo by AbsolutVision
 
@@ -34,7 +34,7 @@ Esto no quiere decir que tengas que crear exactamente ese tipo de aplicaciones s
 
 ## 2) Te enfocas en aprender
 
-![Learning](https://dev-to-uploads.s3.amazonaws.com/i/rlu7wj7ko10igs21egw9.jpeg)
+![Learning](/uploads/rlu7wj7ko10igs21egw9.jpeg)
 
 > Photo by Element5 Digital
 
@@ -50,7 +50,7 @@ En el futuro, cuando quieras crear algo de ese estilo, mi recomendación es que 
 
 ## 3) El camino hacia la meta es claro
 
-![Goals](https://dev-to-uploads.s3.amazonaws.com/i/mv41ty1mqy59u24oudqi.jpeg)
+![Goals](/uploads/mv41ty1mqy59u24oudqi.jpeg)
 
 > Photo by Ante Hamersmit
 
@@ -59,7 +59,7 @@ Esto tiene ademas como ventaja que seguramente otras personas también hayan seg
 
 ## 4) Puedes aportar tu toque personal
 
-![Creatividad](https://dev-to-uploads.s3.amazonaws.com/i/gq7akmlw3k3sq5dqv3wb.jpeg)
+![Creatividad](/uploads/gq7akmlw3k3sq5dqv3wb.jpeg)
 
 > Photo by Dragos Gontariu
 
@@ -78,7 +78,7 @@ O también puedes ir más allá y enfocarte en la parte del backend pudiendo cam
 
 ## 5) Experiencia real
 
-![Work](https://dev-to-uploads.s3.amazonaws.com/i/6hjjgrasaozu623r7frk.jpeg)
+![Work](/uploads/6hjjgrasaozu623r7frk.jpeg)
 
 > Photo by Scott Graham
 
