--- a/content/posts/repos-interesantes-de-la-semana-1.mdx
+++ b/content/posts/repos-interesantes-de-la-semana-1.mdx
@@ -16,7 +16,7 @@ Hola! Hoy les traigo una lista de 5 repositorios interesantes que descubrí la s
 
 ## Snapdrop
 
-![Sitio web Snapdrop](https://dev-to-uploads.s3.amazonaws.com/i/8pkjtbaxogcea4qdovt8.png)
+![Sitio web Snapdrop](/uploads/8pkjtbaxogcea4qdovt8.png)
 
 [Snapdrop](https://snapdrop.net/) es una version open source de la aplicación AirDrop en MacOS. Esta aplicación sirve para compartir archivos estando en la misma red WIFI de forma fácil y rápida.
 
@@ -30,7 +30,7 @@ Repositorio: [RobinLinus / snapdrop](https://github.com/RobinLinus/snapdrop)
 
 ## Mozilla Hubs
 
-![Sitio web Mozilla Hubs](https://dev-to-uploads.s3.amazonaws.com/i/948j2xfely6ekl2fyke5.png)
+![Sitio web Mozilla Hubs](/uploads/948j2xfely6ekl2fyke5.png)
 
 [Hubs](https://hubs.mozilla.com/) es una aplicación que nos permite crear entornos virtuales 3D online para reunirnos con otras personas y charlar en un ambiente un poco mas ameno que una simple video llamada, algo que sin duda ayuda en estos tiempos de pandemia que corren.
 
@@ -56,7 +56,7 @@ Repositorio: [ds-300 / patch-package](https://github.com/ds300/patch-package)
 
 ## Twind
 
-![Sitio web Twind](https://dev-to-uploads.s3.amazonaws.com/i/38ujkgsmhppxcf63idgs.png)
+![Sitio web Twind](/uploads/38ujkgsmhppxcf63idgs.png)
 
 [Twind](https://twind.dev/) es una librería de CSS-in-JS que usa [Tailwindcss](https://tailwindcss.com/) por debajo manteniendo sus ventajas pero ademas agregando otras funcionalidades interesantes como la agrupación de clases por prefijo, combinación condicional de clases y mas.
 
