--- a/content/posts/repos-interesantes-de-la-semana-2.mdx
+++ b/content/posts/repos-interesantes-de-la-semana-2.mdx
@@ -4,7 +4,7 @@ date: '2021-01-17'
 draft: false
 description: Repositorios interesantes de la semana, en esta ocasion les traigo Naming cheatsheet, Electron Fiddle, ExplainShell, Starship y Visx.
 tags: [spanish, opensource, webdev, programming]
-coverimage: https://dev-to-uploads.s3.amazonaws.com/i/wz8gsza72n7g6his43da.png
+coverimage: /uploads/wz8gsza72n7g6his43da.png
 canonical_url: https://matiasverdier.com/posts/repos-interesantes-de-la-semana-2
 series: Repos de la semana
 include_coverimage_in_body: false
@@ -16,7 +16,7 @@ Continuamos con esta serie de posts donde comparto algunos repositorios interesa
 
 ## Naming cheatsheet
 
-![Naming cheatsheet](https://dev-to-uploads.s3.amazonaws.com/i/63aqnpn0orl3i9whgu63.png)
+![Naming cheatsheet](/uploads/63aqnpn0orl3i9whgu63.png)
 
 Creo que todos hemos sufrido un poco a la hora de nombrar variables y funciones en nuestro código, por ese motivo creo que este recopilado de consejos sin dudas nos sera muy útil. También lograremos una mejor legibilidad y que nuestro código sea mas mantenible a largo plazo.
 
@@ -24,7 +24,7 @@ Repo: [kettanaito / naming-cheatsheet](https://github.com/kettanaito/naming-chea
 
 ## Electron Fiddle
 
-![Electron Fiddle](https://dev-to-uploads.s3.amazonaws.com/i/j5nwirgzffrr35y5kc7d.jpg)
+![Electron Fiddle](/uploads/j5nwirgzffrr35y5kc7d.jpg)
 
 La manera más rápida de comenzar con [Electron](https://www.electronjs.org/).
 Electron es una herramienta que nos permite crear aplicaciones multi-plataforma usando tecnologías web.
@@ -39,7 +39,7 @@ Repo: [electron / fiddle](https://github.com/electron/fiddle)
 
 ## ExplainShell
 
-![ExplaiShell Example](https://dev-to-uploads.s3.amazonaws.com/i/blmo6wldens6pz6a1z2e.jpg)
+![ExplaiShell Example](/uploads/blmo6wldens6pz6a1z2e.jpg)
 
 En [explainshell.com](https://www.explainshell.com/) podrás obtener una explicación detallada de los argumentos de tus comandos en la terminal de una manera bastante atractiva y fácil de entender, sin dudas un recurso interesante para el día a día.
 
@@ -47,7 +47,7 @@ Repo: [idank / explainshell](https://github.com/idank/explainshell)
 
 ## Starship
 
-![Starship](https://dev-to-uploads.s3.amazonaws.com/i/h1b5a1f2cyvt4na6prjh.gif)
+![Starship](/uploads/h1b5a1f2cyvt4na6prjh.gif)
 
 Ya que estamos hablando de la terminal, por que no tener un prompt lindo como el que se ve en el ejemplo de arriba?
 
@@ -55,13 +55,13 @@ Eso es que nos permite [Starship](https://starship.rs/), una herramienta desarro
 
 Así se ve mi terminal por ahora cuando estoy dentro de un proyecto con Node.
 
-![Alt Text](https://dev-to-uploads.s3.amazonaws.com/i/rhkw4vebeajw8ccjfoi9.png)
+![Alt Text](/uploads/rhkw4vebeajw8ccjfoi9.png)
 
 Repo: [starship / starship](https://github.com/starship/starship)
 
 ## Visx
 
-![Visx](https://dev-to-uploads.s3.amazonaws.com/i/ymf220qqr4z0t4eyz8zl.png)
+![Visx](/uploads/ymf220qqr4z0t4eyz8zl.png)
 
 Por ultimo les traigo [Visx](https://airbnb.io/visx/), una librería de visualizaciones para React basada en [D3.js](https://d3js.org/) y creada por airbnb.
 
