Add missing images

--- a/content/posts/repos-interesantes-de-la-semana-2.mdx
+++ b/content/posts/repos-interesantes-de-la-semana-2.mdx
@@ -61,7 +61,7 @@ Repo: [starship / starship](https://github.com/starship/starship)
 
 ## Visx
 
-![Visx](/uploads/ymf220qqr4z0t4eyz8zl.png)
+![Visx](/uploads/ymf220qqr4z0t4eyz8zl.jpg)
 
 Por ultimo les traigo [Visx](https://airbnb.io/visx/), una librería de visualizaciones para React basada en [D3.js](https://d3js.org/) y creada por airbnb.
 
